--- a/src/telehealth/LoginPanel.form
+++ b/src/telehealth/LoginPanel.form
@@ -5,6 +5,7 @@
     <Property name="name" type="java.lang.String" value="Form" noResource="true"/>
   </Properties>
   <Events>
+    <EventHandler event="ancestorAdded" listener="javax.swing.event.AncestorListener" parameters="javax.swing.event.AncestorEvent" handler="formAncestorAdded"/>
     <EventHandler event="ancestorRemoved" listener="javax.swing.event.AncestorListener" parameters="javax.swing.event.AncestorEvent" handler="formAncestorRemoved"/>
   </Events>
   <AuxValues>
@@ -69,6 +70,9 @@
         <Property name="text" type="java.lang.String" resourceKey="txtUsername.text"/>
         <Property name="name" type="java.lang.String" value="txtUsername" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtUsernameFocusGained"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
@@ -83,6 +87,9 @@
         <Property name="text" type="java.lang.String" resourceKey="pwdPassword.text"/>
         <Property name="name" type="java.lang.String" value="pwdPassword" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="pwdPasswordFocusGained"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
